--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
   <body>
     <h1>Contact Detail</h1>
-    <p>Seul,South Korea</p>
+    <p>Seoul,South Korea</p>
     <p>00777-7652682</p>
     <p>begumferoza1978@gmail.com</p>
     <hr>
